--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
   --background: #ffffff;
   --foreground: #171717;
   --main-color: #25CAAC;
+  scroll-behavior: smooth;
 }
 
 @media (prefers-color-scheme: dark) {
