--- a/app/globals.css
+++ b/app/globals.css
@@ -19,7 +19,7 @@
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background: #eee;
   font-family: Arial, Helvetica, sans-serif;
 }
 
